--- a/front/src/app/main-navbar/main-navbar.component.html
+++ b/front/src/app/main-navbar/main-navbar.component.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/students">Students<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/stocks">Stocks<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
