--- a/front/src/app/stocks-list/stocks-list.component.html
+++ b/front/src/app/stocks-list/stocks-list.component.html
@@ -6,16 +6,15 @@
         <tr>
             <th>ID</th>
             <th>First name</th>
-            <th>Last name</th>
-            <th>Email</th>
+            <th>Stock key</th>
+            <th>Date</th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let student of studentList">
-            <td>{{ student.id }}</td>
-            <td>{{ student.firstName }}</td>
-            <td>{{ student.lastName }}</td>
-            <td>{{ student.email }}</td>
+        <tr *ngFor="let stock of stocksList">
+            <td>{{ stock.id }}</td>
+            <td>{{ stock.stockKey }}</td>
+            <td>{{ stock.dateTarget }}</td>
         </tr>
         </tbody>
     </table>
